--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,6 +8,13 @@
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
     <nav>
-      <a href="/">Home</a>
-      <a href="/auth/google">Log In</a>
+      <!-- <a href="/movies" <%- title === 'All Movies' ? 'class="active"' : '' %>>ALL MOVIES</a> -->
+      <% if (user) { %>
+        <!-- <a href="/performers/new"	<%- title === 'Add Performer' ? 'class="active"' : '' %>>
+        ADD PERFORMER</a>
+        <a href="/movies/new" <%- title === 'Add Movie' ? 'class="active"' : '' %>>ADD MOVIE</a> -->
+        <a href="/logout">LOG OUT</a>
+      <% } else { %>
+        <a href="/auth/google" class="login">LOG IN&nbsp;<img src="https://i.imgur.com/FHjYyi0.png"></a>
+      <% } %>
     </nav>
