--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,3 +16,9 @@
     <% } %>
   </nav>
   <h3 id="page-title">Cooking with Cody</h3>
+  </div>
+  <br><br><br><br><br><br><br>
+  <div id="welcome">Welcome</div>
+</body>
+</html>
+    
