--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,8 +8,7 @@
   <nav>
     <% if (user) { %>
       <a href="/recipes">All Recipes</a>
-      <a href="recipes">My Recipes</a>
-      <!-- <div id="username"><%= user.name %></div> -->
+      <a href="/recipes">My Recipes</a>
       <a href="/logout">Log Out: <%= user.name %></a>
     <% } else { %>
       <a href="/auth/google" class="login">Log In</a>
