--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
 <body>
@@ -8,11 +12,11 @@
   <nav>
     <% if (user) { %>
       <a href="/recipes">All Recipes</a>
-      <a href="recipes">My Recipes</a>
-      <!-- <div id="username"><%= user.name %></div> -->
+      <a href="/recipes">My Recipes</a>
       <a href="/logout">Log Out: <%= user.name %></a>
     <% } else { %>
       <a href="/auth/google" class="login">Log In</a>
     <% } %>
   </nav>
-  <h3 id="page-title">Cooking with Cody</h3>
+  <h3 id="page-title"><%= title %></h3>
+  
