--- a/views/recipes/index.ejs
+++ b/views/recipes/index.ejs
@@ -4,20 +4,24 @@
   <thead>
     <tr>
       <th>Name:</th>
+      <th></th>
       <th>Ingredients:</th>
       <th>Instructions:</th>
       <th>Diet:</th>
       <th>Gluten Free:</th>
+      <th>More Info:</th>
     </tr>
   </thead>
   <tbody>
     <% recipes.forEach(function(r) { %>
       <tr>
         <td><%= r.name %></td>
+        <td><img src="<%= r.pic %>" id="food-pic"></td>
         <td><%= r.ingredients %></td>
         <td><%= r.instructions %></td>
         <td><%= r.diet %></td>
         <td><%= r.glutenFree ? 'Yes' : 'No' %></td>
+        <td><a href="/recipes/show">More</a></td>
         <% }); %>
     </tbody>
   </table>
