--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -45,7 +45,7 @@ nav > a:hover:not(.active) {
   height: inherit;
 }
 
-#show-page-pic {
+#show-pic {
   position: center;
   width: 50vmin;
   height: auto;
