--- a/views/recipes/show.ejs
+++ b/views/recipes/show.ejs
@@ -34,13 +34,15 @@
     <br>
     <tbody>
         <tr>
-            <th>wine</th>
-            <th>burgundy</th>
-            <th>good</th>
+          <% pairings.forEach(function(p) { %>
+            <th><%= p.style %></th>
+            <th><%= p.name %></th>
+            <th><%= p.result %></th>
+          <% }); %>
         </tr>
     </tbody>
 </table>
-<a href="/recipes/<%= recipe._id %>/pairing/new">Add Paring</a>
+<a href="/recipes/<%= recipe._id %>/pairings/new">Add Pairing</a>
 <br>
 <h2>Commets</h2>
 <% if (user) {%> 
@@ -98,7 +100,7 @@
             </tr>
             <td>
           <% if (user && user._id.equals(c.user)) { %>
-            <form action="/comment/<%= c._id %>?_method=DELETE" method="POST">
+            <form action="/comments/<%= c._id %>?_method=DELETE" method="POST">
               <button type="submit">X</button>
             </form>
           <% } %>
