--- a/views/pairings/new.ejs
+++ b/views/pairings/new.ejs
@@ -1,6 +1,6 @@
 <%- include('../partials/header') %>
 
-<form action="/recipes/<%= recipeId %>" method="POST" id="new-pairing-form">
+<form action="/recipes/<%= recipeId %>/pairings" method="POST" id="new-pairing-form">
     <label>Style:</label>
     <select name="style">
         <option value="Beer">Beer</option>
