--- a/views/pairings/new.ejs
+++ b/views/pairings/new.ejs
@@ -4,7 +4,7 @@
     <label>Style:</label>
     <select name="style">
         <option value="Beer">Beer</option>
-        <option value="wine">wine</option>
+        <option value="Wine">Wine</option>
         <option value="Cocktail">Cocktail</option>
         <option value="Non-Alcoholic">Non-Alcoholic</option>
     </select>
