--- a/views/recipes/edit.ejs
+++ b/views/recipes/edit.ejs
@@ -1,5 +1,22 @@
 <%- include('../partials/header') %>
 
-
+<form action="/recipes/<%= recipe._id %>?_method=PUT" method="POST" id="new-recipe-form">
+    <label>Name:</label>
+    <input type="text" name="name" required>
+    <br>
+    <label>Ingredients:</label>
+    <br>
+    <textarea name="ingredients" cols="30" rows="5"></textarea>
+    <label>Instructions:</label>
+    <textarea name="instructions" cols="30" rows="5"></textarea>
+    <label>Special Diet:</label>
+    <select name="diet">
+        <option value="None">None</option>
+        <option value="Vegan">Vegan</option>
+        <option value="Vegetarian">Vegetarian</option>
+        <option value="Pescatarian">Pescatarian</option>
+    </select>
+    <input type="submit" value="Edit Recipe">
+</form> 
 
 <%- include('../partials/footer') %>
