--- a/views/pairings/new.ejs
+++ b/views/pairings/new.ejs
@@ -13,7 +13,7 @@
     <input name="name" type="text">
     <label>Results:</label>
     <textarea name="results" cols="30" rows="1"></textarea>
-    <input type="submit" value="Add Pairing">
+    <input class="input-button" type="submit" value="Add Pairing">
 </form> 
 
 <%- include('../partials/footer') %>
