--- a/views/recipes/edit.ejs
+++ b/views/recipes/edit.ejs
@@ -2,21 +2,24 @@
 
 <form action="/recipes/<%= recipe._id %>?_method=PUT" method="POST" id="new-recipe-form">
     <label>Name:</label>
-    <input type="text" name="name" required>
+    <input type="text" name="name" value="<%= recipe.name %>">
     <br>
     <label>Ingredients:</label>
+    <textarea name="ingredients" cols="30" rows="5"><%= recipe.ingredients %></textarea>
     <br>
-    <textarea name="ingredients" cols="30" rows="5"></textarea>
     <label>Instructions:</label>
-    <textarea name="instructions" cols="30" rows="5"></textarea>
+    <textarea name="instructions" cols="30" rows="5"><%= recipe.instructions %></textarea>
+    <br>
     <label>Special Diet:</label>
-    <select name="diet">
+    <select name="diet" required>
+        <option value="" selected></option>
         <option value="None">None</option>
         <option value="Vegan">Vegan</option>
         <option value="Vegetarian">Vegetarian</option>
         <option value="Pescatarian">Pescatarian</option>
     </select>
-    <input type="submit" value="Edit Recipe">
+    <br>
+    <input class="input-button" type="submit" value="Edit Recipe">
 </form> 
 
 <%- include('../partials/footer') %>
