--- a/views/recipes/index.ejs
+++ b/views/recipes/index.ejs
@@ -1,10 +1,10 @@
 <%- include('../partials/header') %>
 
-<table id="recipe-list">
-  <thead>
+<table>
+  <thead id="index-list">
     <tr>
       <th>Name:</th>
-      <th></th>
+      <th>Image:</th>
       <th>Diet:</th>
       <th>More Info:</th>
       <th>Update Recipe:</th>
@@ -17,10 +17,10 @@
         <td><%= r.name %></td>
         <td><img src="<%= r.pic %>" id="food-pic"></td>
         <td><%= r.diet %></td>
-        <td><a href="/recipes/<%= r._id %>">More</a></td>
+        <td><button><a href="/recipes/<%= r._id %>">More</a></button></td>
         <td>
           <% if (user && user._id.equals(r.user)) {%> 
-            <a href="/recipes/<%= r._id %>/edit">update</a>
+            <button><a href="/recipes/<%= r._id %>/edit">Update</a></button>
           </td>
           <td>
             <form action="/recipes/<%= r._id %>?_method=DELETE" method="POST">
@@ -31,7 +31,8 @@
         <% }); %>
     </tbody>
   </table>
-  <a href="/recipes/new">Add Recipe</a>
+  <br>
+  <button id="add-recipe-button"><a href="/recipes/new">Add Recipe</a></button>
 
 <%- include('../partials/footer') %>
 
