--- a/views/recipes/index.ejs
+++ b/views/recipes/index.ejs
@@ -1,38 +1,41 @@
 <%- include('../partials/header') %>
-
-<table>
-  <thead id="index-list">
-    <tr>
-      <th>Name:</th>
-      <th>Image:</th>
-      <th>Diet:</th>
-      <th>More Info:</th>
-      <th>Update Recipe:</th>
-      <th>Delete Recipe:</th> 
-    </tr>
-  </thead>
-  <tbody>
-    <% recipes.forEach(function(r) { %>
+<div class='flex-ctr-ctr'>
+  <table>
+    <thead id="index-list">
       <tr>
-        <td><%= r.name %></td>
-        <td><img src="<%= r.pic %>" id="food-pic"></td>
-        <td><%= r.diet %></td>
-        <td><button><a href="/recipes/<%= r._id %>">More</a></button></td>
-        <td>
-          <% if (user && user._id.equals(r.user)) {%> 
-            <button><a href="/recipes/<%= r._id %>/edit">Update</a></button>
-          </td>
+        <th>Name:</th>
+        <th>Image:</th>
+        <th>Diet:</th>
+        <th>More Info:</th>
+        <th>Update Recipe:</th>
+        <th>Delete Recipe:</th> 
+      </tr>
+    </thead>
+    <tbody>
+      <% recipes.forEach(function(r) { %>
+        <tr>
+          <td><%= r.name %></td>
+          <td><img src="<%= r.pic %>" id="food-pic"></td>
+          <td><%= r.diet %></td>
+          <td><button><a href="/recipes/<%= r._id %>">More</a></button></td>
           <td>
-            <form action="/recipes/<%= r._id %>?_method=DELETE" method="POST">
-              <button type="submit">X</button>
-            </form>
-          </td>
-          <% } %> 
-        <% }); %>
-    </tbody>
-  </table>
+            <% if (user && user._id.equals(r.user)) {%> 
+              <button><a href="/recipes/<%= r._id %>/edit">Update</a></button>
+            </td>
+            <td>
+              <form action="/recipes/<%= r._id %>?_method=DELETE" method="POST">
+                <button type="submit">X</button>
+              </form>
+            </td>
+            <% } %> 
+          <% }); %>
+      </tbody>
+    </table>
+</div>
   <br>
-  <button id="add-recipe-button"><a href="/recipes/new">Add Recipe</a></button>
+  <div class='flex-ctr-ctr'>
+    <button  id="add-recipe-button"><a href="/recipes/new">Add Recipe</a></button>
+  </div>
 
 <%- include('../partials/footer') %>
 
