--- a/views/recipes/index.ejs
+++ b/views/recipes/index.ejs
@@ -1,6 +1,6 @@
 <%- include('../partials/header') %>
 <div class='flex-ctr-ctr'>
-  <table>
+  <table class="container">
     <thead id="index-list">
       <tr>
         <th>Name:</th>
