--- a/views/recipes/show.ejs
+++ b/views/recipes/show.ejs
@@ -1,10 +1,11 @@
 <%- include('../partials/header') %>
 
+<div class="container body-background">
 <h2 class="center-text"><%= recipe.name %></h2>
 <br>
 <img class="center" id="show-pic"src="<%= recipe.pic %>">
 <div class="flex-ctr-ctr">
-  <table id="show-recipe-details">
+  <table class="container" id="show-recipe-details">
     <thead>
       <tr>
         <th>Ingredients:</th>
@@ -48,78 +49,79 @@
   </div>
 <br>
 <br>
-<h2>Commets</h2>
-<% if (user) {%> 
-<form id="show-comments-form" method="POST" action="/recipes/<%= recipe._id %>/comments">
-  <label>Comments:</label>
-  <textarea name="content" cols="20" rows="1"></textarea>
-  <label>Taste Rating:</label>
-  <select name="tasteRating">
-    <option value="1">1</option>
-    <option value="2">2</option>
-    <option value="3">3</option>
-    <option value="4">4</option>
-    <option value="5" selected>5</option>
-  </select>
-  <label>Ease Rating:</label>
-  <select name="easeRating">
-    <option value="1">1</option>
-    <option value="2">2</option>
-    <option value="3">3</option>
-    <option value="4">4</option>
-    <option value="5" selected>5</option>
-  </select>
-  <label>Cook Time:</label>
-  <input name="time" type="text">
-  <input class="input-button" type="submit" value="Add Comment">
-</form>
-<% } %>
-
-<% if (recipe.comments.length) { %>
-  <table>
-    <thead>
-      <tr>
-        <th>User</th>
-        <th>Date</th>
-        <th>Comments</th>
-        <th>Taste Rating</th>
-        <th>Ease Rating</th>
-        <th>Cook Time</th>
-        <th>Delete Comment</th>
-      </tr>
-    </thead>
-    <tbody>
-        <% let tasteTotal = 0 %>
-        <% let easeTotal = 0 %>
-        <% recipe.comments.forEach(function(c) { %>
+  <h2>Commets</h2>
+  <% if (user) {%> 
+    <form id="show-comments-form" method="POST" action="/recipes/<%= recipe._id %>/comments">
+      <label>Comments:</label>
+      <textarea name="content" cols="20" rows="1"></textarea>
+      <label>Taste Rating:</label>
+      <select name="tasteRating">
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5" selected>5</option>
+      </select>
+      <label>Ease Rating:</label>
+      <select name="easeRating">
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5" selected>5</option>
+      </select>
+      <label>Cook Time:</label>
+      <input name="time" type="text">
+      <input class="input-button" type="submit" value="Add Comment">
+    </form>
+    <% } %>
+    
+    <% if (recipe.comments.length) { %>
+      <table>
+        <thead>
+          <tr>
+            <th>User</th>
+            <th>Date</th>
+            <th>Comments</th>
+            <th>Taste Rating</th>
+            <th>Ease Rating</th>
+            <th>Cook Time</th>
+            <th>Delete Comment</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% let tasteTotal = 0 %>
+          <% let easeTotal = 0 %>
+          <% recipe.comments.forEach(function(c) { %>
             <% tasteTotal += c.tasteRating %>
             <% easeTotal += c.easeRating %>
             <tr>
-                <td class="comment-user"><img src="<%= c.userAvatar %>">&nbsp;<%= c.userName %></td>
-                <td><%= new Date().toLocaleDateString(); %></td>
-                <td><%= c.content %></td>
-                <td><%= c.tasteRating %></td>
-                <td><%= c.easeRating %></td>
-                <td><%= c.time %></td>
-                <td>
-                  <% if (user && user._id.equals(c.user)) { %>
-                    <form action="/comments/<%= c._id %>?_method=DELETE" method="POST">
-                      <button type="submit">X</button>
-                    </form>
+              <td class="comment-user"><img src="<%= c.userAvatar %>">&nbsp;<%= c.userName %></td>
+              <td><%= new Date().toLocaleDateString(); %></td>
+              <td><%= c.content %></td>
+              <td><%= c.tasteRating %></td>
+              <td><%= c.easeRating %></td>
+              <td><%= c.time %></td>
+              <td>
+                <% if (user && user._id.equals(c.user)) { %>
+                  <form action="/comments/<%= c._id %>?_method=DELETE" method="POST">
+                    <button type="submit">X</button>
+                  </form>
                   <% } %>
+                </tr>
+              </td>
+              <% }); %>
+              <tr>
+                <td colspan="3"></td>
+                <td><strong><%= (tasteTotal / recipe.comments.length).toFixed(1) %></strong></td>
+                <td><strong><%= (easeTotal / recipe.comments.length).toFixed(1) %></strong></td>
+                <td></td>
               </tr>
-        </td>
-      <% }); %>
-      <tr>
-        <td colspan="3"></td>
-        <td><strong><%= (tasteTotal / recipe.comments.length).toFixed(1) %></strong></td>
-        <td><strong><%= (easeTotal / recipe.comments.length).toFixed(1) %></strong></td>
-        <td></td>
-      </tr>
-    </tbody>
-  </table>
-<% } else { %>
-  <h5>No Comments Yet</h5>
-<% } %>
-
-<%- include('../partials/footer') %>
+            </tbody>
+          </table>
+          <% } else { %>
+            <h5>No Comments Yet</h5>
+            <% } %>
+</div>       
+            <%- include('../partials/footer') %>
+            
